sass/_responsive.scss
/* Responsive
--------------------------------------------- */

@media only screen and (max-width: 768px) {

	.site-branding,
	h1.menu-toggle,
	.main-navigation,
	.main-navigation ul,
	.main-navigation li,
	.main-navigation a,
	.main-navigation ul.sub-menu,
	.site-title,
	.site-description,
	.site-info {
		clear: both;
		float: none;
		margin: 0;
		padding: 0;
		@include rem(padding-bottom, 12px);
		text-align: center;
		width: 100%;
	}

	.site-title {
		@include rem(font-size, 48px);
	}

	.site-description {
		@include rem(font-size, 24px);
	}

	.header_widget_area {
		padding: 0;
	}

	.main-navigation {

		ul {
			display: none;
		}

		li {
			@include rem(padding, 6px);
		}

		ul.sub-menu {
			width: 98%;

			ul {
				left: 0;
				top: 40px;
				width: 100%;
			}

			a {
				padding: 0;
				width: 100%;
			}
		}

	}

	.menu-toggle,
	.main-navigation.toggled .nav-menu {
		display: block;
	}

	.header_widget_area {
		.widget_nav_menu {
			ul {
				float: none;
			}
		}
	}

	h1.menu-toggle {
		color: $white;
		@include rem(font-size, 24px);
		@include rem(padding, 12px 0 0);
	}

}

